feat: CasaOS self-contained deployment with 70k perfume auto-seed
- Remove LIMIT=500 in import-csv.ts; now imports all rows by default
  (controlled via IMPORT_LIMIT env var). CSV_DIR env var for path flexibility.
- Dockerfile: compile seed script in builder stage, bundle both CSVs and
  seed.js in runner; copies prisma CLI and csv-parser to runner.
- scripts/entrypoint.sh: wait for Postgres, prisma db push, conditional seed
  (SEED_DB=true + empty DB), then start Next.js server.
- scripts/update.sh: remote auto-update script — git pull, Docker rebuild,
  health check, structured logging. Cron-safe (skips if nothing changed).
- docker-compose.yml: add SEED_DB env var (default false).
- .env.example: document SEED_DB.
- CASAOS_DEPLOYMENT.md: full rewrite — step-by-step guide, update workflow,
  cron auto-update, architecture diagram, useful commands.

--- a/Subash/.env.example
+++ b/Subash/.env.example
@@ -49,3 +49,8 @@ NEXT_PUBLIC_DEFAULT_CITY="Dhaka"
 
 # --- Site URL ---
 NEXT_PUBLIC_SITE_URL="https://subash.com.bd"
+
+# --- CasaOS / Docker seeding ---
+# Set to "true" on FIRST boot to import all ~70k perfumes from the bundled CSV.
+# After the import finishes, set to "false" (or remove) so restarts skip it.
+SEED_DB="false"
