--- a/Subash/docker-compose.yml
+++ b/Subash/docker-compose.yml
@@ -2,10 +2,9 @@
 #  Subash — Docker Compose
 #  Services: PostgreSQL (db) + Next.js (web)
 #
-#  Local dev:   docker compose up --build
-#  CasaOS:      Import docker-compose.yml in
-#               the CasaOS app store UI, or run
-#               via SSH as shown in CASAOS_DEPLOYMENT.md
+#  CasaOS (SSH):     docker compose up -d --build
+#  First boot seed:  SEED_DB=true in .env → auto-imports all 70k perfumes
+#  After seeding:    set SEED_DB=false (or remove it) to skip re-seeding
 # =============================================
 
 services:
@@ -23,9 +22,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      # Expose 5432 on the host so you can connect
-      # with Prisma Studio or TablePlus during dev.
-      # Remove / comment out in production.
+      # Port 5432 exposed so you can connect with Prisma Studio / TablePlus from
+      # your dev machine. Safe on a home LAN; remove on a public-facing server.
       - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
@@ -57,14 +55,16 @@ services:
       NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL}
       NEXT_PUBLIC_DEFAULT_CITY: ${NEXT_PUBLIC_DEFAULT_CITY}
       OPENWEATHERMAP_API_KEY: ${OPENWEATHERMAP_API_KEY}
-      # Firebase (Phase 2.2)
       NEXT_PUBLIC_FIREBASE_API_KEY: ${NEXT_PUBLIC_FIREBASE_API_KEY}
       NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: ${NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN}
       NEXT_PUBLIC_FIREBASE_PROJECT_ID: ${NEXT_PUBLIC_FIREBASE_PROJECT_ID}
       NEXT_PUBLIC_FIREBASE_APP_ID: ${NEXT_PUBLIC_FIREBASE_APP_ID}
+      # ——— Seeding ———————————————————————————————
+      # Set to "true" on FIRST boot only — imports all ~70k perfumes from the
+      # bundled CSVs. After the seed is done, set to "false" (or remove) so
+      # subsequent restarts don’t re-check the DB on every boot.
+      SEED_DB: ${SEED_DB:-false}
     ports:
-      # Map host port → container port.
-      # Change the left side to use a different host port (e.g. 8080:3000).
       - "3000:3000"
 
 volumes:
