feat: publish Docker image to GitHub Container Registry (ghcr.io)
- .github/workflows/docker-publish.yml: GitHub Actions workflow that builds
  and pushes the Docker image to ghcr.io/redwan002117/subash on every push
  to main. Tags: :latest, :semver, :sha-<short>. Uses GHA layer cache.
- docker-compose.yml: add image: ghcr.io/redwan002117/subash:latest so
  CasaOS can pull the pre-built image instead of building from source.
  Both 'image:' and 'build:' coexist — pull for prod, build for dev.
- scripts/update.sh: replace 'docker compose build' with 'docker compose pull'
  for normal updates. New flags: --force, --git-only, --local-build.
- CASAOS_DEPLOYMENT.md: update Step 3, update workflow, useful commands and
  architecture diagram to reflect ghcr.io pull-based deployment.

--- a/Subash/docker-compose.yml
+++ b/Subash/docker-compose.yml
@@ -35,6 +35,7 @@ services:
   #  Next.js Web Application
   # ------------------------------------------
   web:
+    image: ghcr.io/redwan002117/subash:latest
     build:
       context: .
       dockerfile: Dockerfile
