Minor Fixes for casaos build

--- a/Subash/tsconfig.scripts.json
+++ b/Subash/tsconfig.scripts.json
@@ -4,7 +4,8 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": ".ts-out"
+    "outDir": ".ts-out",
+    "noEmit": false
   },
   "include": ["prisma/**/*.ts"]
 }
