--- a/Subash/.env.example
+++ b/Subash/.env.example
@@ -7,20 +7,20 @@
 # --- Database ---
 # Local dev  → host is localhost:5432
 # Docker Compose → host is db:5432 (the service name in docker-compose.yml)
-DATABASE_URL="postgresql://USER:PASSWORD@localhost:5432/subash_db?schema=public"
+DATABASE_URL="postgresql://subash_user:strong_password@subash_db:5432/subash_db?schema=public"
 
 # --- Docker Postgres Init (used by docker-compose.yml only) ---
 # These seed the Postgres container on first start.
 # Keep in sync with the credentials in DATABASE_URL above.
 POSTGRES_USER="subash_user"
-POSTGRES_PASSWORD="change_me_strong_password"
+POSTGRES_PASSWORD="strong_password"
 POSTGRES_DB="subash_db"
 
 # --- Auth.js v5 (next-auth v5) ---
 # Generate with:  npx auth secret   OR   openssl rand -base64 32
 AUTH_SECRET="generate-with: npx auth secret"
 # Local dev:
-AUTH_URL="http://localhost:3000"
+AUTH_URL="http://localhost:9864"
 # Production (swap when deploying):
 # AUTH_URL="https://subash.com.bd"
 
@@ -48,7 +48,7 @@ OPENWEATHERMAP_API_KEY=""
 NEXT_PUBLIC_DEFAULT_CITY="Dhaka"
 
 # --- Site URL ---
-NEXT_PUBLIC_SITE_URL="https://subash.com.bd"
+NEXT_PUBLIC_SITE_URL="https://subash.rico.bd"
 
 # --- CasaOS / Docker seeding ---
 # Set to "true" on FIRST boot to import all ~70k perfumes from the bundled CSV.
