--- a/Subash/docker-compose.yml
+++ b/Subash/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       # your dev machine. Safe on a home LAN; remove on a public-facing server.
       - "5432:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-subash_user} -d ${POSTGRES_DB:-subash_db}" ]
+      test: "pg_isready -U ${POSTGRES_USER:-subash_user} -d ${POSTGRES_DB:-subash_db}"
       interval: 10s
       timeout: 5s
       retries: 5
