--- a/Subash/package.json
+++ b/Subash/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^4.1.3",
+    "@marsidev/react-turnstile": "^1.4.2",
     "@prisma/client": "^6.4.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -32,25 +33,34 @@
     "clsx": "^2.1.1",
     "csv-parser": "^3.2.0",
     "firebase": "^12.9.0",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.34.3",
     "lucide-react": "^0.475.0",
     "next": "^15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-intersection-observer": "^10.0.3",
+    "resend": "^6.9.3",
+    "sharp": "^0.34.5",
+    "swr": "^2.4.1",
     "tailwind-merge": "^3.0.2",
+    "use-debounce": "^10.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
+    "@types/papaparse": "^5.5.2",
+    "@types/pg": "^8.18.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "^15.1.6",
+    "pg": "^8.19.0",
     "postcss": "^8.5.3",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.17",
